--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -67,8 +67,6 @@ a{
 }
 /* Cajas Principales */
 body{
-    height: 100vh;
-    width: 100vw;
     background-image: url("../img/fondo.jpg");
     background-size: cover;
     background-repeat: no-repeat;
@@ -83,9 +81,10 @@ nav,header,main,footer{
     justify-content: flex-start;
     align-items: flex-start;
  }
- header{
-    
+ main{    
     align-items: center;
+    width: 100vw;
+    height: 100vh;
  }
  #contenedor_titulo{
     margin-top: 2rem;
@@ -110,22 +109,33 @@ nav,header,main,footer{
     flex-wrap: wrap;
 
  }
- header .proyecto{
+ main .proyecto{
     background-color:var(--color3);
     align-items: center;
     text-align: center;
     border-style:solid;
     border-radius: 3px;    
     border-color: var(--color0);
-
  }
- header .proyecto .foto img:hover{
+ .contenedorFoto{
+    width: 300px;
+    height: 400px;    
+    overflow: hidden;
+ }
+ .contenedorFoto img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;    
+    transition: 1.5s;
+ }
+ .contenedorFoto img:hover{
     filter: saturate(0);
     border-style: solid;
     border-color: var(--color0);
-    transform:scale(0.95);
-    transition: 1s;
-    }
+    transform:scale(1.3);
+ }
+
+
 #contenedor_copyright{
     margin-top: 6rem;
 }
